[project]
name = "dcnv2"
version = "0.1.4"
authors = [
    {name = "charlesshang"},
]
description = "deformable convolutional networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["setuptools>=61.0", "wheel", "torch", "torchvision"]
build-backend = "setuptools.build_meta"
